Feat: Update frontend login to use username instead of email

--- a/frontend/src/app/components/auth/login/login.component.html
+++ b/frontend/src/app/components/auth/login/login.component.html
@@ -13,8 +13,8 @@
                 </div>
                 <div class="form-container">
                     <span class="p-input-icon-left">
-                        <i class="pi pi-envelope"></i>
-                        <input type="text" autocomplete="off" pInputText placeholder="Email" [(ngModel)]="email" class="block mb-3" style="   max-width: 320px;
+                        <i class="pi pi-user"></i>
+                        <input type="text" autocomplete="off" pInputText placeholder="Username" [(ngModel)]="username" class="block mb-3" style="   max-width: 320px;
                     min-width: 270px;">
                     </span>
                     <span class="p-input-icon-left">
