--- a/frontend/src/app/demo/components/dashboards/ecommerce/ecommerce.dashboard.component.html
+++ b/frontend/src/app/demo/components/dashboards/ecommerce/ecommerce.dashboard.component.html
@@ -158,6 +158,25 @@
 
 </div>
 
-<div *ngIf="loading" class="flex justify-content-center align-items-center h-screen">
-    <p-progressSpinner></p-progressSpinner>
+<!-- SKELETON LOADERS mientras carga -->
+<div class="grid" *ngIf="loading">
+    <div class="col-12 md:col-6 lg:col-3" *ngFor="let i of [1,2,3,4]">
+        <div class="card mb-0">
+            <div class="flex justify-content-between mb-3">
+                <div class="flex-1">
+                    <p-skeleton width="10rem" styleClass="mb-2"></p-skeleton>
+                    <p-skeleton width="4rem" height="2rem"></p-skeleton>
+                </div>
+                <p-skeleton shape="circle" size="2.5rem"></p-skeleton>
+            </div>
+            <p-skeleton width="8rem"></p-skeleton>
+        </div>
+    </div>
+    
+    <div class="col-12">
+        <div class="card">
+            <p-skeleton width="15rem" height="2rem" styleClass="mb-4"></p-skeleton>
+            <p-skeleton width="100%" height="10rem"></p-skeleton>
+        </div>
+    </div>
 </div>
