--- a/frontend/src/app/components/profile/components/user-list/user-list.component.html
+++ b/frontend/src/app/components/profile/components/user-list/user-list.component.html
@@ -6,7 +6,15 @@
 
     <p-tabView>
         <p-tabPanel header="Clientes">
-            <p-table #dtCustomers [value]="customers" [rows]="10" [paginator]="true" responsiveLayout="scroll" [globalFilterFields]="['name','email','membership.name']">
+            
+            <!-- Skeleton while loading -->
+            <div *ngIf="loading" class="pt-4">
+                <p-skeleton width="100%" height="3rem" styleClass="mb-3"></p-skeleton>
+                <p-skeleton width="100%" height="2rem" styleClass="mb-2" *ngFor="let i of [1,2,3,4,5]"></p-skeleton>
+            </div>
+
+            <!-- Actual table -->
+            <p-table *ngIf="!loading" #dtCustomers [value]="customers" [rows]="10" [paginator]="true" responsiveLayout="scroll" [globalFilterFields]="['name','email','membership.name']">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-wrap gap-2 align-items-center justify-content-between">
                         <span class="p-input-icon-left">
@@ -42,7 +50,15 @@
         </p-tabPanel>
 
         <p-tabPanel header="Personal">
-            <p-table #dtStaff [value]="staff" [rows]="10" [paginator]="true" responsiveLayout="scroll" [globalFilterFields]="['name','email','role']">
+            
+            <!-- Skeleton while loading -->
+            <div *ngIf="loading" class="pt-4">
+                <p-skeleton width="100%" height="3rem" styleClass="mb-3"></p-skeleton>
+                <p-skeleton width="100%" height="2rem" styleClass="mb-2" *ngFor="let i of [1,2,3,4,5]"></p-skeleton>
+            </div>
+
+            <!-- Actual table -->
+            <p-table *ngIf="!loading" #dtStaff [value]="staff" [rows]="10" [paginator]="true" responsiveLayout="scroll" [globalFilterFields]="['name','email','role']">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-wrap gap-2 align-items-center justify-content-between">
                         <span class="p-input-icon-left">
