--- a/frontend/src/assets/layout/styles/layout/_topbar.scss
+++ b/frontend/src/assets/layout/styles/layout/_topbar.scss
@@ -1,30 +1,40 @@
 .layout-rightmenu-button {
-    background: linear-gradient(271.89deg, rgba(70,82,104,1), rgba(115,130,161,1));
+    background: linear-gradient(271.89deg, rgba(70, 82, 104, 1), rgba(115, 130, 161, 1));
     border-radius: 6px 0px 0px 6px;
     border-color: transparent;
     border-left: 0 none;
     box-shadow: 0px 0px 10px rgb(15 139 253 / 25%);
     right: 0;
     color: #fff;
+
     span {
         font-weight: 400 !important;
     }
+
     &:enabled:hover {
-        background: linear-gradient(271.89deg, rgba(70,82,104,0.5), rgba(115,130,161,0.5));
+        background: linear-gradient(271.89deg, rgba(70, 82, 104, 0.5), rgba(115, 130, 161, 0.5));
         border-color: transparent;
     }
 }
+
 .layout-topbar {
-    margin-bottom: 2rem;
+    flex: 1 !important;
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: 7px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: var(--primary-900);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 2px, rgba(0, 0, 0, 0.14) 0px 4px 5px, rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
 
     .topbar-start {
         display: flex;
         align-items: center;
         position: relative;
         z-index: 999;
+
         .topbar-menubutton {
             display: inline-flex;
             align-items: center;
@@ -38,7 +48,7 @@
 
             i {
                 font-size: 1.25rem;
-                color: var(--text-color);
+                color: rgba(255, 255, 255, 0.9);
                 transition: color var(--transition-duration);
             }
 
@@ -62,10 +72,11 @@
         list-style: none;
         flex-grow: 1;
         color: var(--topbar-item-text-color);
-        margin-right: -2rem;
+        // margin-right: -2rem;
 
         li {
             margin-left: 1.5rem;
+
             &.topbar-item {
                 margin-left: 1.5rem;
                 display: inline-flex;
@@ -83,64 +94,72 @@
                     width: 2rem;
                     height: 2rem;
                     transition: box-shadow var(--transition-duration);
+                    color: rgba(255, 255, 255, 0.9) !important;
 
                     &:focus {
                         box-shadow: var(--focus-ring);
+                    }
+
+                    &:hover {
+                        background-color: rgba(255, 255, 255, 0.1) !important;
                     }
                 }
 
                 ul {
                     position: absolute;
-                    bottom: -9.4rem;
+                    bottom: -10.6rem;
                     right: 0;
                     display: none;
                     color: var(--text-color);
-                    background: var(--surface-ground);
+                    background: var(--menu-popup-bg, var(--surface-ground));
                     box-shadow: var(--box-shadow);
+
                     &.active-topbar-menu {
                         display: block;
                     }
 
                     a {
-                        color: var(--text-color);
+                        color: var(--menu-text-color, var(--text-color));
                     }
 
 
-                   
+
                 }
             }
+
             .topbar-search {
                 display: flex;
                 align-items: center;
                 flex-shrink: 0;
+
                 .topbar-searchbutton {
-                   display: flex;
+                    display: flex;
                 }
-        
+
                 .search-input-wrapper {
                     position: relative;
                     width: 0;
                     opacity: 0;
                     visibility: hidden;
                     transition: 400ms cubic-bezier(0.86, 0, 0.07, 1);
-        
+
                     span {
                         width: 100%;
-        
+
                         .p-inputtext {
                             width: 100%;
                             position: relative;
                             border-radius: 40px;
                             padding: 9px;
                         }
-        
+
                         i {
                             font-size: 18px;
                             margin-top: -9px;
                         }
                     }
                 }
-        
+
                 &.topbar-search-active {
                     .topbar-searchbutton {
                         opacity: 0;
@@ -150,16 +169,18 @@
                         transition: opacity .1s;
                         transition-delay: .1s;
                     }
-                    
+
                     .search-input-wrapper {
                         width: 190px;
                         opacity: 1;
                         visibility: visible;
                         border-radius: var(--border-radius);
+
                         i {
                             display: block;
                         }
-                        input{
+
+                        input {
                             border-radius: var(--border-radius);
                         }
                     }
@@ -171,8 +192,7 @@
                     color: var(--item-text-color);
                 }
             }
-          
+
         }
     }
 }
-
